clusters/home-cluster/apps/sonarr/service-sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: default
spec:
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      name: webui
      port: 8989
      targetPort: 8989
