clusters/home-cluster/apps/sonarr/httproute-sonarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-route
  namespace: default
spec:
  parentRefs:
  - name: bacterio-gw
  hostnames:
  - "sonarr.carles.cc"
  rules:
  - backendRefs:
    - name: sonarr-service
      port: 8989
